--- a/app/global.css
+++ b/app/global.css
@@ -1,3 +1,6 @@
+@import 'bootstrap/dist/css/bootstrap.css';
+@import 'bootstrap-icons/font/bootstrap-icons.css';
+
 .modal {
     background-color: rgba(255, 255, 255, 0.5);
     -webkit-backdrop-filter: blur(5px);
