--- a/app/docs/connections/flowcard.module.css
+++ b/app/docs/connections/flowcard.module.css
@@ -18,6 +18,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  view-transition-name: metric-card-root !important;
 }
 
 .metricCard::before {
