Refactor accordion animations to use `height` and `opacity` keyframes for smoother transitions, remove the `.accordionBody` class, and adjust sidebar trigger styling.
Signed-off-by: Asutorufa <16442314+Asutorufa@users.noreply.github.com>

--- a/src/component/v2/sidebar.module.css
+++ b/src/component/v2/sidebar.module.css
@@ -99,7 +99,7 @@
 /* Collapsible Trigger */
 .trigger {
     /* Inherits .item styles usually, but we need specific icon behavior */
-    composes: item;
+    display: flex;
 }
 
 .triggerIcon {
