--- a/src/component/v2/forms.module.css
+++ b/src/component/v2/forms.module.css
@@ -35,8 +35,7 @@
 }
 
 /* Basic Input/Select Styling */
-.input,
-.selectTrigger {
+.input {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -52,56 +51,12 @@
   width: 100%;
 }
 
-.selectTriggerSm {
-  height: 32px;
-  font-size: 0.875rem;
-  padding: 0 10px;
-}
-
-.input:focus,
-.selectTrigger[data-state='open'] {
+.input:focus {
   outline: none;
   border-color: var(--bs-primary);
   box-shadow: 0 0 0 2px var(--bs-primary-bg-subtle);
 }
 
-/* Select Specifics */
-.selectContent {
-  overflow: hidden;
-  background-color: var(--bs-body-bg);
-  border-radius: 6px;
-  border: 1px solid var(--bs-border-color);
-  box-shadow: 0px 10px 38px -10px rgba(22, 23, 24, 0.35), 0px 10px 20px -15px rgba(22, 23, 24, 0.2);
-  z-index: 2000;
-}
-
-.selectItem {
-  font-size: 14px;
-  line-height: 1;
-  color: var(--bs-body-color);
-  border-radius: 3px;
-  display: flex;
-  align-items: center;
-  height: 25px;
-  padding: 0 35px 0 25px;
-  position: relative;
-  user-select: none;
-}
-
-.selectItem[data-highlighted] {
-  outline: none;
-  background-color: var(--bs-primary);
-  color: white;
-}
-
-.selectItemIndicator {
-  position: absolute;
-  left: 0;
-  width: 25px;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-}
 
 /* Slider Specifics */
 
@@ -201,14 +156,14 @@
 
 .suggestionItem:hover,
 .suggestionItem[data-highlighted="true"] {
-  background-color: var(--bs-primary);
-  color: white;
+  background-color: var(--bs-tertiary-bg);
+  color: var(--bs-body-color);
 }
 
 /* When highlighted, make sure children text is also readable nicely */
 .suggestionItem:hover .suggestionChildren,
 .suggestionItem[data-highlighted="true"] .suggestionChildren {
-  color: rgba(255, 255, 255, 0.8);
+  color: var(--bs-secondary-color);
 }
 
 .suggestionLabel {
